--- a/index.html
+++ b/index.html
@@ -7,6 +7,47 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- header start -->
+    <header>
+        <nav>
+            <h3 class="header-title">Influencer products</h3>            
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Sign up</a></li>
+                <li><a href="">Log in</a></li>
+                <img id="nav-search" src="images/akar-icons_search.svg" alt="">
+                <img id="nav-cart" src="images/clarity_shopping-cart-outline-badged.svg" alt="">
+            </ul>            
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Start your Journey as Influencer</h1>
+                <p class="banner-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button class="btn-primary">Preebook now <img src="images/arrow-forward 1.svg" alt=""></button>
+            </div>
+            <div class="banner-img">
+                <img src="images/main-camera.png" alt="">
+            </div>
+            
+        </div>
+    </header>
+    <!-- header End -->
+    <main>
+        <section class="sponsors">
+            <div class="sponsors-img-container">
+                <img src="logos/alibaba.svg" alt="">
+                <img src="logos/amazon.svg" alt="">
+                <img src="logos/daraz.pklogo.svg" alt="">
+                <img src="logos/ealmart.svg" alt="">
+                <img src="logos/ebay.svg" alt="">
+                <img src="logos/rakuten.svg" alt="">
+                <img src="logos/target.svg" alt="">
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
