--- a/index.html
+++ b/index.html
@@ -45,9 +45,96 @@
                 <img src="logos/target.svg" alt="">
             </div>
         </section>
+        <!-- popular collection -->
+        <section class="popular-section">
+            <h3 class="popular-title">Popular Collection</h3>
+            <div class="popular-card-container">
+                <div class="card">
+                    <img src="images/tripod.png" alt="">
+                    <h2 class="card-title">Flex Tripod</h2>
+                    <h3 class="card-price">$50.48</h3>
+                    <p class="card-p">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/mic.png" alt="">
+                    <h2 class="card-title">microphone</h2>
+                    <h3 class="card-price">$120.25</h3>
+                    <p class="card-p">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/airpod.png" alt="">
+                    <h2 class="card-title">Airbuds</h2>
+                    <h3 class="card-price">$100.00</h3>
+                    <p class="card-p">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/drone.png" alt="">
+                    <h2 class="card-title">Drone</h2>
+                    <h3 class="card-price">$980.25</h3>
+                    <p class="card-p">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/lights.png" alt="">
+                    <h2 class="card-title">Light Setup</h2>
+                    <h3 class="card-price">$1200.00</h3>
+                    <p class="card-p">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/setup.png" alt="">
+                    <h2 class="card-title">Photoshoot set</h2>
+                    <h3 class="card-price">$820.40</h3>
+                    <p class="card-p">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/camera.png" alt="">
+                    <h2 class="card-title">Vlogging Camera</h2>
+                    <h3 class="card-price">$1800.80</h3>
+                    <p class="card-p">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/single-light.png" alt="">
+                    <h2 class="card-title">Green Screen</h2>
+                    <h3 class="card-price">$25.48</h3>
+                    <p class="card-p">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/action.png" alt="">
+                    <h2 class="card-title">Action Camera</h2>
+                    <h3 class="card-price">$380.00</h3>
+                    <p class="card-p">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="popular-ancor">
+                <a href="">See More </a>
+            <img src="images/Group.svg" alt="">
+            </div>
+            
+        </section>
+        <!-- Feature -->
+        <section class="feature">
+            <div>
+                <img src="images/gear.png" alt="">
+            </div>
+            <div>
+                <h1 class="feature-title">Featured products at one place</h1>
+                <div class="feature-p-section">
+                    <p class="feature-p">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                </div>
+                
+                <button class="btn btn-primary">Join Now <img src="images/arrow-forward 1.svg" alt=""></button>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <h3 class="footer-title">Influencer products</h3>
+        <h5 class="footer-p">Copyright © 2020  influencer products</h5>
+        <h6 class="footer-p">All rights reserved</h6>
+        <div class="footer-icon">
+            <img src="icons/Instagram.svg" alt="">
+            <img src="icons/Dribbble.svg" alt="">
+            <img src="icons/Twitter.svg" alt="">
+            <img src="icons/Youtube.svg" alt="">
+        </div>
     </footer>
 </body>
 </html>
